# flpak

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-linux.yml  build-windows.yml  release.yml  rust.yml
samples/bsa/: correct_v103.bsa  correct_v103_comp.bsa  correct_v103_comp_names.bsa  correct_v104.bsa  correct_v104_comp.bsa  correct_v105.bsa  correct_v105_comp.bsa  invalid_file_flags.bsa  invalid_file_names.bsa  invalid_file_records.bsa  invalid_flags.bsa  invalid_header.bsa  invalid_signature.bsa  invalid_version.bsa
samples/bsa-mw/: correct.bsa  invalid_header.bsa
samples/pak/: correct.pak
samples/rpa/: correct.rpa
samples/unpacked/: file001.txt
src/lib/: file_type.rs  input_file.rs  mod.rs  path_utils.rs  read_ex.rs  reader.rs  registry.rs  utils.rs  write_ex.rs  writer.rs
src/lib/_zip/: common.rs  mod.rs  reader.rs  reader_bits.rs  reader_tests.rs  writer_tests.rs
src/lib/ba2/: dds.rs  mod.rs  reader.rs  reader_tests.rs  records.rs
src/lib/bsa/: common.rs  hash.rs  hash_tests.rs  header.rs  mod.rs  read_file_index.rs  reader.rs  reader_bits.rs  reader_tests.rs  version.rs  write_file_index.rs  writer.rs  writer_tests.rs
src/lib/bsa2/: common.rs  decompressor.rs  mod.rs  reader.rs  reader_tests.rs
src/lib/bsa_mw/: hash.rs  mod.rs  reader.rs  reader_tests.rs  records.rs  writer.rs  writer_tests.rs
src/lib/pak/: common.rs  mod.rs  reader.rs  reader_bits.rs  reader_tests.rs  writer.rs  writer_tests.rs
src/lib/rpa/: common.rs  mod.rs  reader.rs  reader_bits.rs  reader_tests.rs  writer.rs
src/lib/vpk/: common.rs  mod.rs  reader.rs  (+1 more)
(+5 files in other folders)
