[package]
name = "flpak"
description = "A utility to work with some types of archive: bsa, ba2, rpa, vpk, pak, zip."
version = "0.5.2"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/lxndr/flpak"
categories = ["command-line-utilities"]
rust-version = "1.67.1"

[lib]
name = "flpak"
path = "src/lib/mod.rs"

[[bin]]
name = "flpak"
path = "src/bin/cli/main.rs"

[dependencies]
bitflags = "1.3.2"
clap = { version = "4.1.4", features = ["derive"] }
crc32fast = "1.3.2"
encoding_rs = "0.8.32"
flate2 = "1.0.25"
glob = "0.3.1"
hex-literal = "0.3.4"
libflate = "1.3.0"
lz4_flex = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
serde-pickle = "1.1.1"
sha1 = "0.10.5"
tempdir = "0.3.7"
thiserror = "1.0.38"
walkdir = "2.3.2"
zip = "0.6.4"

[dev-dependencies]
rstest = "0.16.0"
